--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 github
+.venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+env/
+build/
+dist/
+*.egg-info/
+.idea/
+.vscode/
+.DS_Store
+.ipynb_checkpoints/
