--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ pandas = "^2.2.0"
 python-dotenv = "^1.0.0"
 httpx = "^0.28.1"
 aiofiles = "^25.1.0"
+isort = "^7.0.0"
 
 [tool.poetry.group.dev.dependencies]
 # Testing
