--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ __pycache__/
 *.pyc
 *.pyo
 *.pyd
-env/
+.env
 build/
 dist/
 *.egg-info/
@@ -13,3 +13,5 @@ dist/
 .DS_Store
 .ipynb_checkpoints/
 .mypy_cache/
+data/documents/*
+cache/*
