chore: update env example

--- a/.env.example
+++ b/.env.example
@@ -13,14 +13,15 @@ LLM_TEMPERATURE=0.3
 MAX_TOKENS=1000
 
 # Embeddings
-EMBEDDING_PROVIDER=local  # 'local' or 'openai'
-EMBEDDING_MODEL=local-minilm  # Local: 'local-minilm'; OpenAI: 'text-embedding-3-small'
+EMBEDDING_PROVIDER=local 
+EMBEDDING_MODEL=local-minilm  
 
 # Qdrant
 QDRANT_URL=http://qdrant:6333
 QDRANT_COLLECTION=documents
 QDRANT_API_KEY=  # Leave empty if not using auth
-VECTOR_SIZE=384 # 384 for 'local-minilm', 1536 for OpenAI 'text-embedding-3-small'
+VECTOR_SIZE=1536
+DISTANCE_METRIC=COSINE  # Options: COSINE, EUCLIDEAN, DOT
 
 # LangFuse
 LANGFUSE_HOST=https://cloud.langfuse.com
