--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ python-dotenv = "^1.0.0"
 httpx = "^0.28.1"
 aiofiles = "^25.1.0"
 isort = "^7.0.0"
+types-aiofiles = "^25.1.0.20251011"
+pandas-stubs = "^2.3.2.250926"
 
 [tool.poetry.group.dev.dependencies]
 # Testing
