--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ aiofiles = "^25.1.0"
 isort = "^7.0.0"
 types-aiofiles = "^25.1.0.20251011"
 pandas-stubs = "^2.3.2.250926"
+tiktoken = "^0.12.0"
 
 [tool.poetry.group.dev.dependencies]
 # Testing
