--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ isort = "^7.0.0"
 types-aiofiles = "^25.1.0.20251011"
 pandas-stubs = "^2.3.2.250926"
 tiktoken = "^0.12.0"
+pdfplumber = "^0.11.7"
 
 [tool.poetry.group.dev.dependencies]
 # Testing
