--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,6 @@ LANGFUSE_ENABLED=true
 # Document Processing
 CHUNK_SIZE=1000
 CHUNK_OVERLAP=50
-CHUNK_STRATEGY=semantic
+CHUNK_STRATEGY=semantic_sentences
 MAX_FILE_SIZE=10000000
 SUPPORTED_EXTENSIONS=.pdf,.docx,.txt,.csv
